# toki-node

./: .env.example  .gitignore  API_DOCUMENTATION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.linux  FINAL_REPORT.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  SECURITY_AUDIT.md  config.example.toml  config.toml  config_boot.toml  config_bootstrap.toml  config_peer.toml  deploy-peer-node.sh  deploy-seed-node.sh  deploy.bat  deploy.sh  deploy_and_run.sh  deploy_remote.bat  deploy_windows.ps1  docker-compose.yml  genesis.json  grafana-dashboard.yaml  key.json  mainnet-config.toml  monitoring.toml  peer-node-config.toml  prometheus.yml  quick_start.sh  seed-node-config.toml  start-testnet.bat  start-testnet.sh  test-genesis.json  (+5 more)
.github/workflows/: build-linux.yml  ci.yml  docker-build.yml  release.yml
ai/: Cargo.toml
ai/src/: adaptive.rs  aggregator.rs  auto_execute.rs  charity.rs  distribute.rs  equalize.rs  lib.rs  scheduler.rs  scheduler_impl.rs  self_healing.rs  theta.rs  welfare.rs
api/: Cargo.toml
api/src/: auth.rs  handlers.rs  lib.rs  rest.rs  routes.rs  websocket.rs
consensus/: Cargo.toml
consensus/src/: difficulty.rs  fork.rs  lib.rs  miner.rs  mining_broadcast.rs  mining_integration.rs  mining_network.rs  tx_pool.rs  validator.rs
core/: Cargo.toml
core/src/: account.rs  block.rs  constants.rs  error.rs  exchange.rs  genesis.rs  lib.rs  transaction.rs  types.rs
core/tests/: integration_test.rs
crypto/: Cargo.toml
crypto/src/: aes.rs  encryption.rs  hash.rs  lib.rs  random.rs  ring_signature.rs
developer/: Cargo.toml
developer/src/: lib.rs  revenue.rs
fee_delay_modification/: MULTI_PROJECT_GUIDE.md  OVERWRITE_GUIDE.md  block_store.rs  constants.rs  genesis.rs  handlers.rs  overwrite_files.bat  overwrite_files.sh  overwrite_multiple_projects.bat  overwrite_multiple_projects.sh  routes.rs  transaction.rs  tx_pool.rs  validator.rs
governance/: Cargo.toml
governance/src/: auto_upgrade.rs  encrypted_storage.rs  key_rotation.rs  key_sender.rs  lib.rs  onchain_upgrade.rs  params.rs  proposal.rs  rotation_scheduler.rs  voting.rs
governance/tests/: integration_test.rs
grafana/dashboards/: toki-dashboard.json
network/: Cargo.toml
network/src/: auto_discovery.rs  dht.rs  gossip.rs  lib.rs  p2p.rs  p2p_full.rs  protocol.rs  sync.rs  sync_engine.rs
node/: Cargo.toml
node/src/: auto_deploy.rs  auto_upgrade.rs  backup.rs  benchmark.rs  bootstrap.rs  cli.rs  config.rs  example.rs  health.rs  logging.rs  main.rs  mainnet.rs  metrics.rs  node.rs  stress_test.rs  testnet.rs
node/testnet-data/: genesis.json
scripts/: performance-test.sh  test-multi-node.sh
storage/: Cargo.toml
storage/src/: account_store.rs  backup.rs  block_store.rs  database.rs  error.rs  lib.rs  transaction_store.rs
test_data/: db
tests/: concurrency_test.rs  fee_delay_test.rs  longevity_test.rs  memory_test.rs  stress_test.rs
