[workspace]
members = [
    "core",
    "crypto",
    "storage",
    "consensus",
    "network",  # 重新启用 P2P 网络
    "ai",
    "governance",
    "api",
    "node",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Toki Development Team"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
log = "0.4"
log4rs = "1.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Networking (libp2p)
libp2p = { version = "0.53", features = [
    "tcp",
    "quic",
    "noise",
    "gossipsub",
    "mdns",
    "kad",
    "ping",
    "identify",
    "yamux",
    "request-response",
    "dns",
    "serde",
] }

# Cryptography
sha2 = "0.10"
ed25519-dalek = "2.1"
curve25519-dalek = "4.1"
x25519-dalek = "2.0"
rand = "0.8"
hex = "0.4"
base58 = "0.2"
blake3 = "1.5"
aes-gcm = "0.10"

# Storage
sled = "0.34"

# Concurrency
parking_lot = "0.12"
dashmap = "5.5"
lru = "0.12"

# Utilities
bytes = "1.5"
num_cpus = "1.16"
bincode = "1.3"

# HTTP API
axum = { version = "0.7", features = ["ws", "json"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.2"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Configuration
config = "0.14"
toml = "0.8"

# Testing
criterion = "0.5"
proptest = "1.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 1
