[package]
name = "toki-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tower-http.workspace = true
hyper.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
parking_lot.workspace = true
bytes.workspace = true
bincode.workspace = true  # 序列化
jsonwebtoken = "9.2"  # JWT 认证

toki-core = { path = "../core" }
toki-storage = { path = "../storage" }
toki-consensus = { path = "../consensus" }
toki-ai = { path = "../ai" }
toki-governance = { path = "../governance" }
toki-developer = { path = "../developer" }

[dev-dependencies]
proptest.workspace = true
