[package]
name = "toki-consensus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
blake3.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
parking_lot.workspace = true
num_cpus = "1.16"

toki-core = { path = "../core" }
toki-storage = { path = "../storage" }
toki-crypto = { path = "../crypto" }

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true
