[package]
name = "toki-node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "toki-node"
path = "src/main.rs"

[[bin]]
name = "toki-benchmark"
path = "src/benchmark.rs"

[[bin]]
name = "toki-example"
path = "src/example.rs"

[[bin]]
name = "toki-stress-test"
path = "src/stress_test.rs"

[dependencies]
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
config.workspace = true
toml.workspace = true
log4rs.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
parking_lot.workspace = true
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
rand = "0.8"
tempfile = "3.10"

toki-core = { path = "../core" }
toki-storage = { path = "../storage" }
toki-consensus = { path = "../consensus" }
toki-network = { path = "../network" }  # P2P 网络
toki-ai = { path = "../ai" }
toki-governance = { path = "../governance" }
toki-developer = { path = "../developer" }
toki-api = { path = "../api" }
toki-crypto = { path = "../crypto" }

[dev-dependencies]
proptest.workspace = true
tempfile = "3.10"
