[package]
name = "toki-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
# rocksdb.workspace = true  # Requires LLVM/Clang
sled.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
parking_lot.workspace = true

toki-core = { path = "../core" }

[dev-dependencies]
proptest.workspace = true
tempfile = "3.10"
